# HOLY-TREE-ARCHITECTURE

./: .gitignore  .mcpconfig  API_REFERENCE.md  CMakeLists.txt  Examples.mqh  GITHUB_SETUP.md  HolyTree_Architecture_README.md  IMPORTANCE.md  INSTALLATION.md  LICENSE  README.md  USAGE_GUIDE.md  WORKFLOW.md  demo_add_entity.py  demo_holy_tree_deletion.py  integration_framework.py
.clinerules/: BuildProcessingAndDeploymentGuide.md  CodingStandards.md  HardcodedValuesHunterProtocol.md  MCP_Integration_First.md  MQL5_Implementation_Guide.md  Multi_Tier_Object_Architecture_Guide.md  PerformanceGuidelines.md  QualityGates.md
CodeAnalysisServer_MCP/: README.md  mcp_config.json  mcp_server.py  requirements.txt
DocumentationMCP_Server/: README.md  documentation_server.py
GraphRagMcpServer/: package-lock.json  package.json  tsconfig.json
GraphRagMcpServer/src/: index.ts
HolyTree_MCP/: README.md  holy_tree_server.py
Indexer/: CIndexer.mqh
ROMILLM_Architecture/: Class_Relationship_Diagrams.md  Communication_Protocols.md  Data_Model_Architecture.md  Error_Handling_Patterns.md  Lifecycle_State_Machines.md  Performance_Architecture.md  ProjectStructure.md  README.md  Software_Architecture_Overview.md
SupportingTypes/Enums/: ENUM_ASSET_TYPE.mqh  ENUM_MARKET_SYMBOLS.mqh
SupportingTypes/Schema/: JsonSchema.json
SupportingTypes/Structs/: SFinancialAsset.mqh
Utilities/: ConverterExamples.mqh  StringCharArrayConverter.mqh  StringJsonConverter.mqh  TestConverters.mq5
hyperlinked_docs/: ProjectStructure.md  README.md
